<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosIniciasActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bem_vindo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/txt_explicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_primeiro_acesso"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome"
        app:layout_constraintTop_toBottomOf="@id/txt_explicacao"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:hint="@string/hint_nome"
        app:layout_constraintTop_toBottomOf="@id/txt_nome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_receita_liquida_mensal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_receita_liquida_mes"
        app:layout_constraintTop_toBottomOf="@id/edt_nome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/edt_receita_liquida_mensal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_valor"
        app:layout_constraintTop_toBottomOf="@id/txt_receita_liquida_mensal"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/edt_receita_liquida_mensal"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_vamos_economizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/txt_vamos_economizar"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>