<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    
    <TextView
        android:id="@+id/txt_ola"
        android:text="@string/txt_ola"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_explicacao"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:text="@string/txt_explicacao_historico"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_ola"
        app:layout_constraintStart_toStartOf="parent"/>

    <TableLayout
        android:id="@+id/tbl_l_historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2,3"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_explicacao"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0">

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_mes_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_mes_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_mes_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txt_entrada"
                android:background="#e0e0e0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_entrada_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_entrada_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_entrada_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txt_saida"
                android:background="#e0e0e0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_saida_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_saida_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_saida_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txt_economia"
                android:background="#e0e0e0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_economia_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_economia_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_historico_economia_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:textSize="20sp"
        android:text=""
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tbl_l_historico"
        app:layout_constraintBottom_toTopOf="@id/tbl_l_resultado"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_explicacao_economia"
        android:layout_width="match_parent"
        android:padding="9dp"
        android:text="@string/txt_explicacao_economia"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tbl_l_resultado"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>

    <TableLayout
        android:id="@+id/tbl_l_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/purple_500"
        android:stretchColumns="0,1">

        <TableRow
            android:paddingTop="20dp">
            <TextView
                android:text="@string/txt_entrada"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txt_economia_entrada_valor"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>


        <TableRow
            android:paddingTop="20dp">
            <TextView
                android:text="@string/txt_saida"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txt_economia_saida_valor"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:text="@string/txt_economia"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/txt_economia_valor"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>